make go-project create-item test pass, correct status code return from create-item endpoint
