# golang-gin-pgx/docs/swagger.yaml
@@ -123,8 +123,8 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "201":
+          description: Created
           schema:
             $ref: '#/definitions/models.CreateItemResponse'
         "409":
